--- a/speakers.html
+++ b/speakers.html
@@ -1,121 +1,137 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BSidesRJ - Palestrantes</title>
-  <!-- Tailwind CSS via CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <!-- CSS customizado -->
-  <link rel="stylesheet" href="css/custom.css">
-  <link rel="icon" type="image/x-icon" href="\images\favicon.ico">
-  <style>
-    .countdown-item {
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-      animation: pulse 2s infinite;
-    }
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-      100% { transform: scale(1); }
-    }
-    .hero-button {
-      animation: float 3s ease-in-out infinite;
-    }
-    @keyframes float {
-      0% { transform: translateY(0px); }
-      50% { transform: translateY(-10px); }
-      100% { transform: translateY(0px); }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BSidesRJ - Palestrantes</title>
+    <!-- Tailwind CSS via CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!-- CSS customizado -->
+    <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" type="image/x-icon" href="\images\favicon.ico">
+    <style>
+        .countdown-item {
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        animation: pulse 2s infinite;
+        }
+        @keyframes pulse {
+        0% { transform: scale(1); }
+        50% { transform: scale(1.05); }
+        100% { transform: scale(1); }
+        }
+        .hero-button {
+        animation: float 3s ease-in-out infinite;
+        }
+        @keyframes float {
+        0% { transform: translateY(0px); }
+        50% { transform: translateY(-10px); }
+        100% { transform: translateY(0px); }
+        }
+    </style>
 </head>
+
 <body class="overflow-x-hidden min-h-screen relative">
-  <!-- Elemento de background fixo -->
-  <div class="fixed-bg"></div>
+    <!-- Elemento de background fixo -->
+    <div class="fixed-bg"></div>
 
-  <!-- Conteúdo que ficará sobre o background -->
-  <div class="content relative z-20 bg-black bg-opacity-50 flex flex-col min-h-screen">
-    <!-- Header -->
-    <header class="bg-black bg-opacity-60 backdrop-blur-md shadow-lg py-3 flex items-center justify-between px-4">
-      <a href="index.html">
-        <img src="images/logo.png" alt="BSidesRJ Logo" class="max-h-14">
-      </a>
-      <!-- Menu para desktop -->
-      <nav class="hidden md:flex space-x-4 text-white text-lg">
-        <a href="/index.html" class="hover:text-yellow-400 transition">Home</a>
-        <a href="/schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
-        <a href="/speakers.html" class="hover:text-yellow-400 transition">Palestrantes</a>
-        <a href="/contato.html" class="hover:text-yellow-400 transition">Contato</a>
-      </nav>
-      <!-- Botão do menu móvel -->
-      <button id="mobile-menu-btn" class="md:hidden text-white ml-4">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-      </button>
-    </header>
+    <!-- Conteúdo que ficará sobre o background -->
+    <div class="content relative z-20 bg-black bg-opacity-50 flex flex-col min-h-screen">
+        <!-- Header -->
+        <header class="bg-black bg-opacity-60 backdrop-blur-md shadow-lg py-3 flex items-center justify-between px-4">
+            <a href="index.html">
+                <img src="images/logo.png" alt="BSidesRJ Logo" class="max-h-14">
+            </a>
+            <!-- Menu para desktop -->
+            <nav class="hidden md:flex space-x-4 text-white text-lg">
+                <a href="/index.html" class="hover:text-yellow-400 transition">Home</a>
+                <a href="/schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
+                <a href="/speakers.html" class="hover:text-yellow-400 transition">Palestrantes</a>
+                <a href="/contato.html" class="hover:text-yellow-400 transition">Contato</a>
+            </nav>
+            <!-- Botão do menu móvel -->
+            <button id="mobile-menu-btn" class="md:hidden text-white ml-4">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                    </path>
+                </svg>
+            </button>
+        </header>
 
-    <!-- Menu móvel -->
-    <nav id="mobile-menu" class="hidden md:hidden bg-black bg-opacity-90 text-white w-full">
-      <ul class="flex flex-col p-4 space-y-2">
-        <li><a href="/index.html" class="block hover:text-yellow-400 transition">Home</a></li>
-        <li><a href="/schedule.html" class="block hover:text-yellow-400 transition">Agenda</a></li>
-        <li><a href="/speakers.html" class="block hover:text-yellow-400 transition">Palestrantes</a></li>
-        <li><a href="/contato.html" class="block hover:text-yellow-400 transition">Contato</a></li>
-      </ul>
-    </nav>
+        <!-- Menu móvel -->
+        <nav id="mobile-menu" class="hidden md:hidden bg-black bg-opacity-90 text-white w-full">
+            <ul class="flex flex-col p-4 space-y-2">
+                <li><a href="/index.html" class="block hover:text-yellow-400 transition">Home</a></li>
+                <li><a href="/schedule.html" class="block hover:text-yellow-400 transition">Agenda</a></li>
+                <li><a href="/speakers.html" class="block hover:text-yellow-400 transition">Palestrantes</a></li>
+                <li><a href="/contato.html" class="block hover:text-yellow-400 transition">Contato</a></li>
+            </ul>
+        </nav>
         <!-- Main Content -->
         <main class="container mx-auto px-4 py-16">
             <h1 class="text-4xl font-bold text-center text-yellow-400 mb-12">Palestrantes</h1>
-            
+
             <!-- Speakers Grid -->
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Fernando Mercês -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Fernando Mercês</h3>
                     <p class="text-yellow-400 mb-4">Keynote Speaker</p>
                     <p class="text-gray-300 mb-4">O que vi em dez anos como pesquisador de segurança</p>
-                    <a href="speakers/fernando-merces.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <a href="speakers/fernando-merces.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
+                        detalhes →</a>
                 </div>
 
                 <!-- Abid Lohan -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Abid Lohan</h3>
                     <p class="text-yellow-400 mb-4">Game Hacking Specialist</p>
                     <p class="text-gray-300 mb-4">Game Hacking: do Zero ao Kernel</p>
-                    <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
+                        →</a>
                 </div>
 
                 <!-- Lucas Carmo -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Lucas Carmo</h3>
                     <p class="text-yellow-400 mb-4">Red Team Expert</p>
                     <p class="text-gray-300 mb-4">The Shadow Behind Red Team Radiance</p>
-                    <a href="speakers/lucas-carmo.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <a href="speakers/lucas-carmo.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
+                        →</a>
                 </div>
 
                 <!-- José Luiz -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">José Luiz</h3>
                     <p class="text-yellow-400 mb-4">Malware Analyst</p>
                     <p class="text-gray-300 mb-4">Malwares & EDRs</p>
-                    <a href="speakers/jose-luiz.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <a href="speakers/jose-luiz.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
+                        →</a>
                 </div>
 
                 <!-- Heitor Gouvêa -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Heitor Gouvêa</h3>
                     <p class="text-yellow-400 mb-4">Security Researcher</p>
-                    <p class="text-gray-300 mb-4">An approach of FBP for rapid development of offensive security tools</p>
-                    <a href="speakers/heitor-gouvea.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <p class="text-gray-300 mb-4">An approach of FBP for rapid development of offensive security tools
+                    </p>
+                    <a href="speakers/heitor-gouvea.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
+                        detalhes →</a>
                 </div>
 
                 <!-- Iago Blambila -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Iago Blambila</h3>
                     <p class="text-yellow-400 mb-4">Forensics Expert</p>
                     <p class="text-gray-300 mb-4">The Darkside of the Moon - How to Really Think About Anti Forensic</p>
-                    <a href="speakers/iago-blambila.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <a href="speakers/iago-blambila.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
+                        detalhes →</a>
                 </div>
 
                 <!-- Bruno Dantas
@@ -127,19 +143,25 @@
                 </div> -->
 
                 <!-- Nelson Brito -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Nelson Brito</h3>
                     <p class="text-yellow-400 mb-4">Vulnerability Researcher</p>
-                    <p class="text-gray-300 mb-4">Inception — Tips and tricks I've learned reversing vulnerabilities!</p>
-                    <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <p class="text-gray-300 mb-4">Inception — Tips and tricks I've learned reversing vulnerabilities!
+                    </p>
+                    <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
+                        →</a>
                 </div>
 
                 <!-- Lucas Reis -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Lucas Reis</h3>
                     <p class="text-yellow-400 mb-4">Data Science Expert</p>
-                    <p class="text-gray-300 mb-4">Visualização de modelos de machine learning não-supervisionados baseados em distância para detecção de anomalias</p>
-                    <a href="speakers/Lucas-reis.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <p class="text-gray-300 mb-4">Visualização de modelos de machine learning não-supervisionados
+                        baseados em distância para detecção de anomalias</p>
+                    <a href="speakers/Lucas-reis.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
+                        →</a>
                 </div>
 
                 <!-- Lucas Zanoni
@@ -151,11 +173,14 @@
                 </div> -->
 
                 <!-- Rodrigo Ferreira-->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Rodrigo Ferreira</h3>
                     <p class="text-yellow-400 mb-4">Network Infrastructure Specialist</p>
-                    <p class="text-gray-300 mb-4">Anatomia de um mini-AS: explorando fragmentos da infraestrutura global da internet</p>
-                    <a href="speakers/rodrigo-ferreira.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <p class="text-gray-300 mb-4">Anatomia de um mini-AS: explorando fragmentos da infraestrutura global
+                        da internet</p>
+                    <a href="speakers/rodrigo-ferreira.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
+                        detalhes →</a>
                 </div>
 
                 <!-- Paulo Raphael
@@ -167,11 +192,14 @@
                 </div> -->
 
                 <!-- Luiz Custódio -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Luiz Custódio</h3>
                     <p class="text-yellow-400 mb-4">AppSec Specialist</p>
-                    <p class="text-gray-300 mb-4">AppSec Nightmares - Defeating Secure Code Review GPT Hallucinations</p>
-                    <a href="speakers/luiz-custodio.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <p class="text-gray-300 mb-4">AppSec Nightmares - Defeating Secure Code Review GPT Hallucinations
+                    </p>
+                    <a href="speakers/luiz-custodio.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
+                        detalhes →</a>
                 </div>
 
                 <!-- Marcelo Almeida
@@ -182,18 +210,23 @@
                     <a href="speakers/marcelo-almeida.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div> -->
                 <!-- Pedro Sydenstricker -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Pedro Sydenstricker</h3>
                     <p class="text-yellow-400 mb-4">Security Engineer</p>
-                    <p class="text-gray-300 mb-4">Privacidade, open-source e descentralização: Nym mixnet e a próxima geração de infraestrutura de privacidade</p>
-                    <a href="speakers/pedro-sydenstricker.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                    <p class="text-gray-300 mb-4">Privacidade, open-source e descentralização: Nym mixnet e a próxima
+                        geração de infraestrutura de privacidade</p>
+                    <a href="speakers/pedro-sydenstricker.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
+                        detalhes →</a>
                 </div>
-                    <!-- Zoziel Freire -->
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                <!-- Zoziel Freire -->
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Zoziel Freire</h3>
                     <p class="text-yellow-400 mb-4">Security Engineer</p>
                     <p class="text-gray-300 mb-4">Ransomware vs EDR: Inside the Mind of Attackers</p>
-                    <a href="speakers/zoziel-freire.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>                        
+                    <a href="speakers/zoziel-freire.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
+                        detalhes →</a>
                 </div>
             </div>
         </main>
@@ -210,8 +243,9 @@
             const menu = document.getElementById('mobile-menu');
             menu.classList.toggle('hidden');
         }
-        
+
         document.getElementById('mobile-menu-btn').addEventListener('click', toggleMenu);
     </script>
 </body>
+
 </html>
